<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home.Function">

    <androidx.cardview.widget.CardView
        android:id="@+id/topView"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_alignParentTop="true"
        android:padding="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:padding="10dp"
                android:scaleType="fitStart"
                android:src="@drawable/ytone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/castScreen"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/search"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_marginHorizontal="25dp"
                android:layout_marginEnd="12dp"
                android:src="@drawable/ic_baseline_search_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/cvUser"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cvUser"
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:layout_margin="17dp"
                app:cardCornerRadius="30dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">


                <ImageView
                    android:id="@+id/ivUser"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/ic_baseline_person_24" />

            </androidx.cardview.widget.CardView>

            <ImageView
                android:id="@+id/notification"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginHorizontal="12dp"
                android:src="@drawable/ic_baseline_notifications_none_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/search"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/castScreen"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginHorizontal="18dp"
                android:src="@drawable/ic_sharp_cast_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/notification"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/flContainer"
        android:name="com.google.android.youtube.player.YouTubePlayerSupportFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/bottomView"
        app:layout_constraintTop_toBottomOf="@+id/topView"
        tools:layout="@layout/fragment_home" />

    <androidx.cardview.widget.CardView
        android:id="@+id/bottomView"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_alignParentBottom="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="58dp">

            <ImageView
                android:id="@+id/ivHome"
                android:layout_width="23dp"
                android:layout_height="23dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="5dp"
                android:scaleType="fitXY"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/img" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="@string/home"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_10"
                app:layout_constraintEnd_toEndOf="@id/ivHome"
                app:layout_constraintStart_toStartOf="@id/ivHome"
                app:layout_constraintTop_toBottomOf="@id/ivHome" />

            <ImageView
                android:id="@+id/ivLibrary"
                android:layout_width="23dp"
                android:layout_height="23dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="25dp"
                android:scaleType="fitXY"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/lib" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="@string/library"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_10"
                app:layout_constraintEnd_toEndOf="@id/ivLibrary"
                app:layout_constraintStart_toStartOf="@id/ivLibrary"
                app:layout_constraintTop_toBottomOf="@id/ivLibrary" />

            <ImageView
                android:id="@+id/ivUpload"
                android:layout_width="43dp"
                android:layout_height="0dp"
                android:layout_marginVertical="6dp"
                android:layout_marginStart="30dp"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/ivLibrary"
                app:layout_constraintStart_toStartOf="@id/ivHome"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/plus" />

            <ImageView
                android:id="@+id/ivShorts"
                android:layout_width="23dp"
                android:layout_height="23dp"
                android:layout_marginTop="5dp"
                android:scaleType="fitXY"
                app:layout_constraintEnd_toStartOf="@id/ivUpload"
                app:layout_constraintStart_toEndOf="@+id/ivHome"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/shorts" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="@string/shorts"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_10"
                app:layout_constraintEnd_toEndOf="@id/ivShorts"
                app:layout_constraintStart_toStartOf="@id/ivShorts"
                app:layout_constraintTop_toBottomOf="@id/ivShorts" />

            <ImageView
                android:id="@+id/ivSub"
                android:layout_width="23dp"
                android:layout_height="23dp"
                android:layout_marginTop="5dp"
                android:scaleType="fitXY"
                app:layout_constraintEnd_toStartOf="@id/ivLibrary"
                app:layout_constraintStart_toEndOf="@+id/ivUpload"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/subs" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="@string/subscriptions"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_10"
                app:layout_constraintEnd_toEndOf="@id/ivSub"
                app:layout_constraintStart_toStartOf="@id/ivSub"
                app:layout_constraintTop_toBottomOf="@id/ivSub" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>